!Important Changes in LyX 2.3.0


!!Interface changes

LyX now has "inverted" branch insets, which output their contents just in 
case a given branch is not "activated". This makes inclusion of alternate
material in different versions easier.


!!!The following pref variables were added in 2.3:


!!!The following pref variables were changed in 2.3:


!!!The following pref variables are obsoleted in 2.3:


!!!The following new LyX functions have been introduced in 2.3:

* branch-invert
  Toggles inversion status of branch inset.


!!!The following LyX functions have been changed in 2.3:


!!!The following LyX documents have been moved in 2.3:


!!!The following metadata files have been added to the tarball in 2.3:


!!Changes with respect to external programs and libraries in 2.3:


!!Known issues in version 2.3.0


!!Caveats when upgrading from earlier versions to 2.3.x
