@@ -22,6 +22,9 @@ material in different versions easier.
 * branch-invert
   Toggles inversion status of branch inset.
 
+* lyx-activate
+  Activates the LyX window. Useful in combination with reverse search.
+
 
 !!!The following LyX functions have been changed in 2.3:
 
